Add root category api
