# back-end/api/v1/rest-battle-net/rest_battle_net.go
@@ -11,12 +11,14 @@ import (
 	"wowcollector.io/internal/entities/documents"
 	"wowcollector.io/internal/entities/response"
 	errorresponse "wowcollector.io/internal/entities/response/error"
+	achievementcategoryrepository "wowcollector.io/internal/repository/repositories/achievement-category-repository"
 	realmrepository "wowcollector.io/internal/repository/repositories/realm-repository"
 )
 
 func GetRoutes(r chi.Router) {
 	r.Route("/battle-net", func(r chi.Router) {
 		r.Get("/realms-regions", getRealmsAndRegions)
+		r.Get("/root-achievement-categories", getRootAchievementCategories)
 	})
 }
 
@@ -52,6 +54,45 @@ func getRealmsAndRegions(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 	w.Write(body)
 	zap.L().Info("Responded with realms and regions collection")
+}
+
+// @summary Fetch all root achievement categories
+// @description Get all the achievement categories which are root (top level)
+// @tags BattleNet
+// @produce json
+// @success 200 {object} []response.AchievementCategoryResponse
+// @failure 400 {object} errorresponse.ErrorResponse
+// @failure 404 {object} errorresponse.ErrorResponse
+// @router /api/v1/battle-net/root-achievement-categories [get]
+func getRootAchievementCategories(w http.ResponseWriter, r *http.Request) {
+	zap.L().Info("Fetching achievement root categories")
+	categories, err := achievementcategoryrepository.GetRepository().GetAchievementRootCategories()
+	if err != nil {
+		zap.L().Error("Failed fetching achievement root categories")
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(errorresponse.GenerateErrorBody(errorcodes.INTERNAL_ERROR, "Failed fetching achievement root categories"))
+		return
+	}
+	var result []*response.AchievementCategoryResponse
+	for _, element := range categories {
+		result = append(result, &response.AchievementCategoryResponse{
+			Id:           element.Id,
+			Name:         element.Name,
+			DisplayOrder: element.DisplayOrder,
+		})
+	}
+
+	body, err := json.Marshal(result)
+	if err != nil {
+		zap.L().Error("Failed to stringify response body")
+		w.WriteHeader(http.StatusBadRequest)
+		w.Write(errorresponse.GenerateErrorBody(errorcodes.INTERNAL_ERROR, "Invalid JSON body"))
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(body)
+	zap.L().Info("Responded with achievement root categories")
 }
 
 func getRegions() []*response.RegionResponse {
