# back-end/api/v1/rest-character/aggregator/achievement_aggregator.go
@@ -13,7 +13,7 @@ import (
 	achievementrepository "wowcollector.io/internal/repository/repositories/achievement-repository"
 )
 
-func GetAchievementAggregation(character httpresponses.BattleNetCharacter, collection httpresponses.BattleNetCharacterAchievements, rootCategory string) []response.AchievementCollectionCategory {
+func GetAchievementAggregation(character httpresponses.BattleNetCharacter, collection httpresponses.BattleNetCharacterAchievements, rootCategoryId int) []response.AchievementCollectionCategory {
 	collectedIds := getCollectedAchievementIds(collection)
 	achievementCategories, _ := achievementcategoryrepository.GetRepository().GetAchievementCategories()
 	var items []response.AchievementCollectionCategory
@@ -25,7 +25,7 @@ func GetAchievementAggregation(character httpresponses.BattleNetCharacter, colle
 		if !element.IsRootCategory {
 			continue
 		}
-		if rootCategory != "" && element.Name != rootCategory {
+		if rootCategoryId != 0 && element.Id != rootCategoryId {
 			continue
 		}
 		wg.Add(1)
