# back-end/cmd/web/docs/swagger.json
@@ -45,6 +45,41 @@
                 }
             }
         },
+        "/api/v1/battle-net/root-achievement-categories": {
+            "get": {
+                "description": "Get all the achievement categories which are root (top level)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BattleNet"
+                ],
+                "summary": "Fetch all root achievement categories",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.AchievementCategoryResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errorresponse.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/errorresponse.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/character/{region}/{realm}/{character}": {
             "get": {
                 "description": "Get summary information about a character",
@@ -135,7 +170,7 @@
                     {
                         "type": "string",
                         "description": "Root category to include",
-                        "name": "rootCategory",
+                        "name": "rootCategoryId",
                         "in": "query"
                     }
                 ],
@@ -221,6 +256,38 @@
                     }
                 }
             }
+        },
+        "/api/v1/leaderboard/mounts": {
+            "get": {
+                "description": "Get the leaderboard mounts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BattleNet"
+                ],
+                "summary": "Fetch leaderboard for mounts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.PaginationResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errorresponse.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/errorresponse.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -257,6 +324,20 @@
                     "$ref": "#/definitions/errorcodes.ErrorCode"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.AchievementCategoryResponse": {
+            "type": "object",
+            "properties": {
+                "displayOrder": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
@@ -327,6 +408,23 @@
                 }
             }
         },
+        "response.LeaderboardEntry": {
+            "type": "object",
+            "properties": {
+                "character": {
+                    "type": "string"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "realm": {
+                    "type": "string"
+                },
+                "region": {
+                    "type": "string"
+                }
+            }
+        },
         "response.MountCollectionCategorySwagger": {
             "type": "object",
             "properties": {
@@ -353,13 +451,10 @@
         "response.MountCollectionMount": {
             "type": "object",
             "properties": {
-                "creatureDisplay": {
-                    "type": "string"
+                "assets": {
+                    "$ref": "#/definitions/response.MountCollectionMountAssets"
                 },
                 "description": {
-                    "type": "string"
-                },
-                "icon": {
                     "type": "string"
                 },
                 "id": {
@@ -370,6 +465,34 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "response.MountCollectionMountAssets": {
+            "type": "object",
+            "properties": {
+                "display": {
+                    "type": "string"
+                },
+                "largeIcon": {
+                    "type": "string"
+                },
+                "smallIcon": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.PaginationResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.LeaderboardEntry"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
