# back-end/internal/entities/response/achievement_category_response.go
@@ -1,0 +1,7 @@
+package response
+
+type AchievementCategoryResponse struct {
+	Id           int    `json:"id"`
+	Name         string `json:"name"`
+	DisplayOrder int    `json:"displayOrder"`
+}
